# monopacker

./: .gitignore  .pre-commit-config.yaml  .swo  .swp  .taskcluster.yml  Dockerfile  Makefile  Pipfile  README.md  TEMPLATING.md  TODO.md  Vagrantfile  aerickson_notes.md  fake_secrets.yaml  packer.yaml  packer.yaml.jinja2  pipupdate.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: github-actions.yml
SBOMs/: README.md  copy-to-monopacker-sboms.sh
builders/: docker_community_azure.yaml  docker_community_gcp.yaml  docker_firefoxci_gcp_l1.yaml  docker_firefoxci_gcp_l3.yaml  docker_firefoxci_gcp_lt.yaml  docker_worker_aws.yaml  docker_worker_azure.yaml  docker_worker_community_aws.yml  docker_worker_community_azure.yaml  docker_worker_firefoxci_aws.yml  docker_worker_firefoxci_aws_metal.yml  docker_worker_firefoxci_aws_vm.yml  docker_worker_firefoxci_gcp_l1.yaml  docker_worker_gcp.yaml  docker_worker_gcp_community.yaml  docker_worker_gcp_l3.yaml  docker_worker_gcp_trusted.yaml  generic_firefoxci_gcp_l1.yaml  generic_firefoxci_gcp_l1_arm64.yaml  generic_firefoxci_gcp_l1_arm64_gui.yaml  generic_firefoxci_gcp_l1_gui.yaml  generic_firefoxci_gcp_l3.yaml  generic_firefoxci_gcp_l3_arm64.yaml  generic_translations_gcp.yaml  generic_worker_aws_win2016.yaml  generic_worker_gcp.yaml  generic_worker_win2016.yaml  gw_firefoxci_gcp_l1.yaml  gw_firefoxci_gcp_l3.yaml  gw_fxci_gcp_l1.yaml  gw_fxci_gcp_l1_arm64.yaml  gw_fxci_gcp_l1_arm64_gui.yaml  gw_fxci_gcp_l1_gui.yaml  gw_fxci_gcp_l1_gui_2404.yaml  gw_fxci_gcp_l3.yaml  gw_fxci_gcp_l3_arm64.yaml  gw_fxci_gcp_l3_arm64_gui.yaml  gw_fxci_gcp_l3_gui.yaml  gw_translations_gcp.yaml  gw_translations_multiengine.yaml  (+3 more)
builders/old/: docker_community_aws.yaml  vagrant_virtualbox_bionic.yaml
monopacker/: files.py  filters.py  main.py  monorepo.py  packer.py  secrets.py  template_packer.py
monopacker/post-processors/: move_sbom_to_latest_artifact_name.py
monopacker/utils/: monopacker_ubuntu_sbom.py
scripts/base/: 20-statsd.sh
scripts/debugging-fail/: 01-fail.sh
scripts/default/: 01-kernel.sh  01-packages.sh  02-grub.sh  02-loopback.sh  05-modules.sh  10-packages.sh  20-statsd.sh  99-clean.sh
scripts/docker-worker-linux/: 10-node.sh  11-yarn.sh  (+6 more)
tests/: test_secrets.py  test_template_packer.py
util/: pack_secrets.py  template_packer.py  yaml_to_json.py
worker_types/: gecko-1-miles-test.yaml
(+142 files in other folders)
