[tool.poetry]
name = "monopacker"
version = "0.1.0"
description = "builds taskcluster worker images for AWS and GCP using packer"
authors = ["Miles Crabill <mcrabill@mozilla.com>", "Dustin J. Mitchell <dustin@mozilla.com>"]
maintainers = ["Taskcluster Team <tools-taskcluster@lists.mozilla.org>",
               "Release SRE <relops@mozilla.com>",]
license = "MPL 2.0"
readme = "README.md"
keywords = ["packer", "templating"]

[tool.poetry.dependencies]
python = "^3.7"
ruamel-yaml = "^0.16.10"
jinja2 = "^2.11.3"
click = "^7.0"
markupsafe = "2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pyfakefs = "^5.1.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
monopacker = "monopacker.main:main"
